# purpl-engine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  FalseKing.md  LICENSE  LICENSE.md  README.md  azure-pipelines.yml  mujoco.lua  purpl-engine.code-workspace  shared.lua  xmake.lua
assets/: build.py  chief.txt
assets/fonts/: charset.txt
assets/models/: chief.fbx
assets/shaders/vulkan/: basic.frag  basic.vert
buildscripts/: shared.lua
common/: alloc.c  alloc.h  common.c  common.h  filesystem.c  filesystem.h  log.c  log.h  wintypes.h
demo/: CMakeLists.txt  app.json  main.cc  purpl-demo.desktop  purpl-demo.rc  resource.h
devtools/: xmake.lua
docs/: design.md  style.md
engine/: camera.c  camera.h  components.c  components.h  discord.c  discord.h  engine.c  engine.h  entity.c  entity.h  entity_os.c  mathutil.c  mathutil.h  ui.c  ui.h
engine/discord/: discord.c  discord.h
engine/math/: transform.h
engine/physics/: physics.h
engine/physics/physx/: backend.cpp
engine/render/: VmaUsage.cpp  d3d12.cpp  d3d12.h  render.c  render.h  vk.c  vk.h
engine/render/dx12/: backend.cpp  buffer.cpp  command.cpp  device.cpp  draw.cpp  dx12.h  model.cpp  object.cpp  pipeline.cpp  rendertarget.cpp  shader.cpp  swapchain.cpp  sync.cpp  texture.cpp  util.cpp
engine/render/engine/render/: d3d12.h
engine/render/opengl/: backend.c  model.c  opengl.h  shader.c  texture.c  util.c
engine/render/swrast/: backend.c  draw.c  line.c  model.c  pixel.c  primitive.c  swrast.h
engine/render/vk/: VmaUsage.cpp  backend.c  buffer.c  command.c  deferred.c  descriptor.c  device.c  framebuffer.c  image.c  instance.c  model.c  object.c  renderpass.c  shader.c  swapchain.c  sync.c  texture.c  util.c  vk.h
engine/rendersystem/: rendersystem.c  rendersystem.h
engine/rendersystem/directx/: dx9.cpp  dx9.h
engine/rendersystem/vulkan/: vk.c  vk.h
gdk/: MicrosoftGameConfig.gdk.mgc  MicrosoftGameConfig.gdkx.mgc  MicrosoftGameConfig.mgc  gxdk_xs_toolchain.cmake
include/purpl/: app_info.h  graphics.h  inst.h  log.h  macro.h  purpl.h  types.h  util.h  window.h
include/purpl/opengl/: opengl_graphics.h
include/purpl/vulkan/: buffer.h  command.h  debug.h  framebuffer.h  image.h  inst.h  logical_device.h  macro.h  physical_device.h  pipeline.h  queuefamily.h  spirv.h  surface.h  swapchain.h  util.h  vulkan_graphics.h
include/purpl/win32/: graphics.h  macro.h  window.h
include/purpl/win32/vulkan/: debug.h  device.h  inst.h  logical_device.h  macro.h  physical_device.h  queuefamily.h  util.h  validation.h  vulkan.h  vulkan_graphics.h
include/purpl/x11/: opengl.h  window.h
include/purpl/x11/vulkan/: inst.h  util.h
platform/: async.h  platform.h  video.h
platform/gdk/: MicrosoftGameConfig.mgc  grdk_toolchain.cmake
platform/unix/: async.c  launcher.c  platform.c  video.c
platform/uwp/: configure.bat
platform/win32/: async.c  launcher.c  platform.c  platform.cpp  purpl.rc  video.c
purpl/: config.h.in  main.c  purpl.h
scripts/: createheader.py
src/: CMakeLists.txt  CMakeLists.txt.bak  app_info.cc  inst.cc  log.cc  purpl.rc  resource.h  util.cc
src/shaders/: CMakeLists.txt
src/vulkan/: buffer.cc  command.cc  debug.cc  framebuffer.cc  image.cc  inst.cc  logical_device.cc  physical_device.cc  pipeline.cc  queuefamily.cc  spirv.cc  surface.cc  swapchain.cc  util.cc
src/vulkan/shaders/: CMakeLists.txt  triangle.frag  triangle.vert  triangle_predef.vert
src/win32/: purpl.rc  resource.h  window.cc
src/win32/vulkan/: debug.cc  device.cc  inst.cc  logical_device.cc  physical_device.cc  queuefamily.cc  util.cc  validation.cc
src/x11/: window.cc
tools/: dofiles.py  msvc.bat
tools/linux/x86_64/: msdf-atlas-gen
util/: font.c  font.h  mesh.c  mesh.h  texture.c  texture.h  xmake.lua
util/tools/: meshtool.c  texturetool.c
uwp/: Package.appxmanifest
xmake/: mujoco.lua  shared.lua
